--- a/index(1).html
+++ b/index(1).html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vrooom ¡ª Barracuda X10</title>
+  <title>Vrooom - Barracuda X10</title>
   <style>
     * {
       box-sizing: border-box;
@@ -21,7 +21,7 @@
       position: relative;
       height: 100vh;
       width: 100%;
-      background-image: url('assets/mercedes-vision-avtr.webp');
+      background-image: url('mercedes-vision-avtr.webp');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -215,7 +215,7 @@
   <section class="hero">
     <!-- Logo -->
     <div class="hero-logo">
-      <img src="assets/logo-enh.png" alt="Vrooom Logo">
+      <img src="logo-enh.png" alt="Vrooom Logo">
     </div>
 
     <!-- Text -->
@@ -227,7 +227,7 @@
     <!-- Video -->
     <div class="hero-video">
       <video autoplay loop muted>
-        <source src="assets/avtr-demo.mp4" type="video/mp4">
+        <source src="avtr-demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
@@ -245,19 +245,19 @@
     </div>
     <div class="top-card">
       <h3>Eco Mode</h3>
-      <p>Fuel-efficient and clean in city mode ¡ª go fast and green.</p>
+      <p>Fuel-efficient and clean in city mode - go fast and green.</p>
     </div>
     <div class="card">
       <h3>Smart Interior</h3>
       <p>Includes voice assistant, panoramic HUD, memory seats, and climate AI.</p>
     </div>
     <div class="card">
-      <h3>Advanced Safety</h3>
-      <p>Features like adaptive cruise control, lane-keeping assist, and automatic emergency braking.</p>
+      <h3>Safety concept</h3>
+      <p>Mercedes-Benz is improving the PRE-SAFE system with innovative technologies.</p>
     </div>
     <div class="card">
-      <h3>Customizable Design</h3>
-      <p>Choose from a variety of colors, trims, and interior options to personalize your vehicle.</p>
+      <h3>Core design concept</h3>
+      <p>"Sensual", "pure" â€“ but not completely subverted.</p>
     </div>
   </section>
 
@@ -283,7 +283,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 Vrooom. All rights reserved.</p>
+    <p>&copy; 2025 Vrooom. All rights reserved.Weiqi Shen</p>
   </footer>
 
 </body>
